update index spacing. Fix mobile menu gradient bug

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -140,6 +140,7 @@
     border-radius: 20px;
     transition: all 1s;
     box-shadow: -5px 5px 40px rgba(1,1,1,0.5);
+    z-index: 101;
 }
 
 .mobileMenu.gradient {
@@ -157,6 +158,7 @@
     display: none;
     overflow: hidden;
     transition: all 0.3s;
+    z-index: 100;
 }
 
 .mobileBackgroundBlur.mobileMenuEnabled {
